--- a/pages/search-page/search-page.wxss
+++ b/pages/search-page/search-page.wxss
@@ -41,7 +41,7 @@
   position: absolute;
   right: 30rpx;
   top: 31rpx;
-  color: #eb2444;
+  color: #666;
 }
 
 .search-bar .search-box .search-img {
@@ -59,6 +59,7 @@
   right: 20rpx;
   top: 14rpx;
   display: block;
+  z-index: 100;
 }
 
 /* 热门搜索&搜索历史 */
@@ -124,6 +125,7 @@
   margin-right: 20rpx;
   margin-bottom: 20rpx;
   padding: 10rpx 30rpx;
+  color:#aaa;
 }
 
 .clear-history image {
