--- a/pages/found/found.wxss
+++ b/pages/found/found.wxss
@@ -1,30 +1,42 @@
+page{
+    height:100%;
+}
+.container{
+    background-color:#fff;
+    position: relative;
+}
+
+
 .van-tabs__line{
-background:var(--tabs-bottom-bar-color,linear-gradient(246deg,rgba(248,151,120,1) 0%,rgba(241,75,127,1) 100%));
+background-color:#1EC19A !important;
 
 }
-.container .van-tab{
-    flex:initial;
-    min-width:120rpx;
+.container .van-tabs__wrap{
+    max-width:400rpx;
+    margin:0 auto;
 
-}.container .van-tabs__wrap{
-    max-width:750rpx;
+}.container .van-sticky-wrap {
+
+    background:#fff;
 }
 .container .flex-box{
 
     align-items: center;
-}.container .flex-box .btn-box{
+}
+.btn-box{
+    position:fixed;
+    right:32rpx;
+    bottom: 100rpx;
+    width: 84rpx;
+    height: 84rpx;
+    background: #32CBA6;
+    box-shadow: 0 4rpx 24rpx 0px rgba(30, 193, 154, 0.22);
+    border-radius: 50%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
 
-   background:#fff;
-}
-.container .flex-box .btn{
-    width:120rpx;
-    height:56rpx;
-    background:linear-gradient(246deg,rgba(248,151,120,1) 0%,rgba(241,75,127,1) 100%);
-    border-radius:8rpx;
-    color:#fff;
-    font-size:24rpx;
-    margin-right:32rpx;
-}
 .container .flex-box .van-sticky{
     min-width:750rpx;
     border-bottom:2rpx solid #EDEDED;
