--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,11 +1,8 @@
-<!--pages/login/login.wxml-->
-<image src='http://img-test.gz-yami.com/mini/logo.jpg' class='c-logo'></image>
+<!--pages/login/mobile.wxml-->
+<image src='../../images/logo.png' class='c-logo'></image>
 <view class="title">中羽协</view>
 <view class="msg">申请获得你的公开信息（昵称、头像等）</view>
-<view wx:if="{{showType==2}}">
+<view>
     <button  color="#eb2444"  open-type="getUserInfo" lang = "zh_CN" bindgetuserinfo = "onGotUserInfo" class=''>微信授权</button>
-</view>
-<view wx:else>
-    <button  color="#eb2444"  open-type="getPhoneNumber" lang = "zh_CN" bindgetphonenumber = "getPhoneNumber" class=''>获取手机号</button>
 </view>
 
