--- a/pages/moment-time/detail/detail.wxml
+++ b/pages/moment-time/detail/detail.wxml
@@ -1,31 +1,69 @@
-<view>
-    <view>
-        <userItem></userItem>
+<view class="container">
+    <view style="margin-top: 40rpx;">
+        <userItem item="{{userInfo}}"></userItem>
     </view>
     <view class="list">
-        <view class="itemBox" wx:for="{{list}}" wx:key="index">
-            <view class="flex-box">
-                <image src="../../../images/timg.jpeg" class="head"></image>
+        <view class="itemBox" wx:for="{{messageRecords}}" wx:key="index">
+            <view class="flex-box" style="flex:1">
+                <image src="{{item.pic}}" class="head"></image>
                 <view class="leave-message">
                     <view class="flex-box flex-space">
                         <view class="flex-box flex-y-center">
-                            <view class="name">一颗小米粒mily</view>
+                            <view class="name">{{item.nickName}}</view>
                             <image src="../../../images/icon/lady.png" class="lady"></image>
                         </view>
-                        <image src="../../../images/icon/zan.png" class="zan"></image>
+                        <view>
+                            <image src="{{item.likeFlag==1?'../../../images/icon/zan.png':'../../../images/icon/zan1.png'}}"
+                                   class="zan"
+                                   bindtap="TapLike"
+                                   data-current="{{item}}"
+                            ></image>
+                            <text></text>
+                        </view>
+
                     </view>
 
-                    <view class="time">一小时前</view>
-                    <view class="text">哇，看上就好美味～</view>
-                    <view class="message">
-                        <view class="flex-box">
-                            <view class="userName">lynn：</view>
-                            <view class="txt">哈哈哈哈</view>
-                        </view>
-                    </view>
+                    <view class="time">{{item.timeLong.day>0?item.timeLong.day+'天':item.timeLong.hour>0?item.timeLong.hour+'小时':item.timeLong.min+"分钟"}}前</view>
+                    <view class="text">{{item.content}}</view>
+<!--                    <view class="message">-->
+<!--                        <view class="flex-box">-->
+<!--                            <view class="userName">lynn：</view>-->
+<!--                            <view class="txt">哈哈哈哈</view>-->
+<!--                        </view>-->
+<!--                    </view>-->
                 </view>
             </view>
 
         </view>
     </view>
+    <view class="foot">
+        <view class="box">
+<!--            <editor class="ipt" id="editor"-->
+<!--                    bindstatuschange="onStatusChange"-->
+<!--                    bindready="onEditorReady"-->
+<!--                    bindinput="getEditorValue"-->
+<!--            ></editor>-->
+<!--            <view  class="text">{{query.content}}</view>-->
+            <input   placeholder="写评论..."
+                     placeholder-style="color:#aaa;font-size:24rpx;"
+                     class="ipt"
+                     bindinput="getMyText"
+                     value="{{query.content}}"
+            />
+        </view>
+        <view class="flex-box flex-y-center">
+<!--            <image class="icon" src="../../../images/talk/biaoqing.png" bindtap="showModule"-->
+<!--                   data-type="emoji"></image>-->
+            <view class="send-btn"  bindtap="postMyMessage">
+                发送
+            </view>
+        </view>
+    </view>
+<!--    <scroll-view class="emoji" scroll-y enable-flex wx:if="{{showData.showEmoji}}">-->
+<!--        <view wx:for="{{showData.emojiName}}" wx:key="index" class="emojiItem" bindtap="chooseEmoji"-->
+<!--              data-current="{{item}}">-->
+<!--            <image src="{{showData.emojiUrl + showData.emojiMap[item]}}" style="width:60rpx;height:60rpx;"/>-->
+<!--        </view>-->
+<!--    </scroll-view>-->
+
 </view>
