--- a/pages/found/found.wxml
+++ b/pages/found/found.wxml
@@ -7,9 +7,12 @@
             <tab title="{{item.name}}" wx:for="{{categoryList}}"
                  title-style="color:{{activeIndex==index?'#333':'#999999'}};font-weight:{{activeIndex==index?'700':'500'}}"
                  wx:key="index">
-                <view class="content">
+                <view class="content" >
                     <view wx:for="{{list}}" wx:key="index">
                         <userItem item="{{item}}"></userItem>
+                    </view>
+                    <view style="height:60rpx;color:#aaa;font-size:24rpx;" class="flex-center">
+                        {{!stopLoad?'加载更多':'没有更多了'}}
                     </view>
                 </view>
             </tab>
