--- a/pages/order/orderIndex.wxss
+++ b/pages/order/orderIndex.wxss
@@ -4,7 +4,7 @@
 }
 
 page {
-    height:100%;
+    height: 100%;
 }
 
 .container .van-tab {
@@ -43,8 +43,7 @@ page {
     padding: 32rpx;
     background-color: #fff;
     margin-bottom: 20rpx;
-    display: flex;
-    justify-content: space-between;
+
     border-radius: 16rpx;
 }
 
@@ -68,28 +67,135 @@ page {
     font-size: 30rpx;
 }
 
-.right-part{
-    font-size:24rpx;
-    color:#333;
+.right-part {
+    font-size: 24rpx;
+    color: #333;
 }
 
-.status{
-    color:#aaa;
+.status {
+    color: #aaa;
 }
 
-.notice{
+.notice {
     text-align: center;
-    color:#aaa;
-    font-size:22rpx;
-    margin-top:32rpx;
+    color: #aaa;
+    font-size: 22rpx;
+    margin-top: 32rpx;
 }
 
 .favorite {
     margin-top: 24rpx;
-    padding:0 32rpx;
+    padding: 0 32rpx;
 }
+
 .favorite .t1 {
-   font-size:30rpx;
-    color:#333;
-    font-weight:700;
+    font-size: 30rpx;
+    color: #333;
+    font-weight: 700;
 }
+
+.btnGroup {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 24rpx;
+}
+
+.btnGroup .bnt1 {
+    min-width: 156rpx;
+    height: 56rpx;
+    color:#1EC19A;
+    font-size:24rpx;
+    border-radius: 28px;
+    border: 2rpx solid #1EC19A;
+}
+.btnGroup .bnt2 {
+    min-width: 156rpx;
+    height: 56rpx;
+    color:#fff;
+    font-size:24rpx;
+    border-radius: 28px;
+    margin-left:20rpx;
+
+}
+.toastModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+}
+.toastModal .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+
+}
+
+.toastModal .Modal {
+    width: 100%;
+
+    background: rgba(255, 255, 255, 1);
+    border-top-left-radius: 32rpx;
+    border-top-right-radius: 32rpx;
+    z-index: 10;
+    position: relative;
+    padding: 64rpx 0 26rpx;
+}
+
+.toastModal .Modal .cancel {
+    width: 24rpx;
+    height: 24rpx;
+
+}
+
+.toastModal .Modal .sure {
+    width: 100rpx;
+    height: 56rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 28rpx;
+    border: 2rpx solid rgba(241, 75, 127, 1);
+    color: #F14B7F;
+    font-size: 24rpx;
+
+}
+
+.toastModal .Modal .notice {
+    text-align: center;
+    font-size: 24rpx;
+    color: #aaa;
+}
+
+.toastModal .Modal .row {
+    box-sizing: border-box;
+    height: 160rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 28rpx;
+    color: #333;
+    font-weight: 700;
+}
+
+.toastModal .Modal .row .gou image {
+    width: 32rpx;
+    height: 32rpx;
+
+}
+
+.toastModal .Modal .row .gou {
+    width: 64rpx;
+    height: 64rpx;
+    display: flex;
+    align-items: center;
+}
+
