--- a/pages/to-trainer/step-four/step-four.wxss
+++ b/pages/to-trainer/step-four/step-four.wxss
@@ -15,7 +15,7 @@
 }
 
 .step-box .itemActive {
-    background-color: #F14B7F;
+    background-color: #1EC19A;
 }
 
 .step {
@@ -55,9 +55,9 @@
     width:206rpx;
     height:76rpx;
     border-radius:46rpx;
-    border:2rpx solid rgba(241,75,127,1);
+    border:2rpx solid #1EC19A;
     font-size:28rpx;
-    color:#F14B7F;
+    color:#1EC19A;
     display:flex;
     align-items: center;
     justify-content: center;
