--- a/pages/to-trainer/step-one/step-one.wxss
+++ b/pages/to-trainer/step-one/step-one.wxss
@@ -15,7 +15,7 @@
 }
 
 .step-box .itemActive {
-    background-color: #F14B7F;
+    background-color: #1EC19A;
 }
 
 .step {
@@ -49,7 +49,7 @@
 .photo .border-box{
     position:relative;
     width:686rpx;
-    height:304rpx;
+    min-height:304rpx;
     margin-top:28rpx;
     margin-bottom:80rpx;
     color:#CECECE;
@@ -62,6 +62,10 @@
     left:0;
     width:686rpx;
     height:304rpx;
+}.photo .border-box .bg2{
+
+    width:686rpx;
+
 }
 .photo .border-box .photoImage{
     width:84rpx;
