--- a/app.wxss
+++ b/app.wxss
@@ -126,7 +126,24 @@ image {
     height: 28rpx;
     margin-right: 12rpx;
 }
+.lv-box {
+    position: relative;
+    text-align: center;
+    width: 88rpx;
+    height: 28rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 24rpx;
 
+}
+.lv-box .lv-text{
+    position:relative;z-index:10;
+    font-size:20rpx;
+    color:#fff;
+    padding-left:20rpx;
+
+}
 /*vip图片*/
 .lv2 {
     width: 88rpx;
